--- a/includes/include-img/clawGrid.tex
+++ b/includes/include-img/clawGrid.tex
@@ -3,14 +3,14 @@
   \centering
   \begin{tabular}{  c p{0.7cm} c}
     %\centering
-    \includegraphics[width=5cm]{img/clawGrid} & &
+    \includegraphics[width=5.5cm]{img/clawGrid} & &
     \includegraphics[width=3.5cm]{img/clawInduced.png}
     \\
     \footnotesize %\centering 
-    (a)  \footnotesize Claw with paths && \footnotesize (b) Subgraph induced by paths\\
+    (a)  \footnotesize Claw with paths. && \footnotesize (b) Subgraph induced by paths.\\
   \end{tabular}
 
- \caption{Reconstruction of the intersection model}
+ \caption{Reconstruction of the intersection model.}
  \label{fig:clawGrid}
 \end{figure} 
 
