--- a/refs.bib
+++ b/refs.bib
@@ -169,7 +169,7 @@
   author = {Andrei Asinowski and Andrew Suk},
   title = {Edge intersection graphs of systems of paths on a grid with a bounded
 	number of bends},
-  journal = {Discrete Applied Math},
+  journal = {Discrete Applied Mathematics},
   year = {2009},
   volume = {157},  
   pages = {3174-3180},
@@ -476,7 +476,7 @@
 }
 %-----------------------------------
 @article{alcon2010necessary,
-  title={A necessary condition for EPT graphs and a new family of minimal forbidden subgraphs},
+  title={A necessary condition for {EPT} graphs and a new family of minimal forbidden subgraphs},
   author={Alc{\'o}n, Liliana and Gutierrez, Marisa and Mazzoleni, Mar{\i}a P{\i}a},
   journal={Matem{\'a}tica Contempor{\^a}nea},
   volume={39},
@@ -533,7 +533,7 @@
 @article{harary1974line,
   title={Line graphs of bipartite graphs},
   author={Harary, F and Holzmann, C},
-  journal={Rev. Soc. Mat. Chile},
+  journal={Revista De La Sociedad Matematica De Chile,},
   volume={1},
   number={1},
   pages={19--22},
@@ -558,6 +558,94 @@
   school={Facultad de Ciencias Exactas}
 }
 %-----------------------------------
+@article{monma1986intersection,
+  title={Intersection graphs of paths in a tree},
+  author={Monma, Clyde L and Wei, Victor K},
+  journal={Journal of Combinatorial Theory, Series B},
+  volume={41},
+  number={2},
+  pages={141--181},
+  year={1986},
+  publisher={Elsevier}
+}
+%-----------------------------------
+@article{gavril1975recognition,
+  title={A recognition algorithm for the intersection graphs of directed paths in directed trees},
+  author={Gavril, Fǎnicǎ},
+  journal={Discrete Mathematics},
+  volume={13},
+  number={3},
+  pages={237--249},
+  year={1975},
+  publisher={Elsevier}
+}
+%-----------------------------------
+@article{cela2019monotonic,
+  title={Monotonic Representations of Outerplanar Graphs as Edge Intersection Graphs of Paths on a Grid},
+  author={Cela, Eranda and Gaar, Elisabeth},
+  journal={arXiv preprint arXiv:1908.01981},
+  year={2019}
+}
+%-----------------------------------
+@article{cameron2016edge,
+  title={Edge intersection graphs of {L}-shaped paths in grids},
+  author={Cameron, Kathie and Chaplick, Steven and Ho{\`a}ng, Ch{\'\i}nh T},
+  journal={Discrete Applied Mathematics},
+  volume={210},
+  pages={185--194},
+  year={2016},
+  publisher={Elsevier}
+}
+%-----------------------------------
+@article{golumbic2018edge,
+  title={Edge-intersection graphs of boundary-generated paths in a grid},
+  author={Golumbic, Martin Charles and Morgenstern, Gila and Rajendraprasad, Deepak},
+  journal={Discrete Applied Mathematics},
+  volume={236},
+  pages={214--222},
+  year={2018},
+  publisher={Elsevier}
+}
+%-----------------------------------
+@article{gavril1978recognition,
+  title={A recognition algorithm for the intersection graphs of paths in trees},
+  author={Gavril, F{\u{a}}nic{\u{a}}},
+  journal={Discrete Mathematics},
+  volume={23},
+  number={3},
+  pages={211--227},
+  year={1978},
+  publisher={Elsevier}
+}
+%-----------------------------------
+@article{syslo1985triangulated,
+  title={Triangulated edge intersection graphs of paths in a tree},
+  author={Sys{\l}o, Maciej M},
+  journal={Discrete mathematics},
+  volume={55},
+  number={2},
+  pages={217--220},
+  year={1985},
+  publisher={North-Holland}
+}
+%-----------------------------------
+@article{bornstein2019complexity,
+  title={The Complexity of {H}elly {B}$_{1}$-{EPG} Graph Recognition},
+  author={Bornstein, Claudson F and Golumbic, Martin Charles and Santos, Tanilson D and Souza, U{\'e}verton S and Szwarcfiter, Jayme L},
+  journal={arXiv preprint arXiv:1906.11185},
+  year={2019}
+}
+%-----------------------------------
+%-----------------------------------
+%-----------------------------------
+%-----------------------------------
+%-----------------------------------
+%-----------------------------------
+%-----------------------------------
+%-----------------------------------
 %-----------------------------------
 %-----------------------------------
 
+%-----------------------------------
+%-----------------------------------
+%-----------------------------------
