--- a/includes/include-img/clawAndEdgeClique.tex
+++ b/includes/include-img/clawAndEdgeClique.tex
@@ -3,12 +3,12 @@
   \centering
   \begin{tabular}{  p{4cm} p{0.7cm} p{4cm} }
     %\centering
-    \includegraphics[width=3.5cm]{img/b0epgTransparenciaGrade2} & &
-    \includegraphics[width=3.5cm]{img/b1EpgTransparenteGrade2}
+    \includegraphics[width=4.5cm]{img/edge-clique.png} & &
+    \includegraphics[width=3.5cm]{img/claw-clique.png}%b1EpgTransparenteGrade2
     \\
     \footnotesize %\centering 
-    (a)  \footnotesize Representation of a clique as edge-clique && \footnotesize (b) Representation  of a clique as claw-clique\\
+    (a)  \footnotesize Representation of a clique as edge-clique. && \footnotesize (b) Representation  of a clique as claw-clique.\\
   \end{tabular}
 
- \caption{Examples of clique representations} \label{fig:cliquesRepresentation}
+ \caption{Examples of clique representations.} \label{fig:cliquesRepresentation}
 \end{figure}
