--- a/includes/include-img/diagram1.tex
+++ b/includes/include-img/diagram1.tex
@@ -1,7 +1,7 @@
  \begin{figure}[htb]	
  \center%6.3
- \includegraphics[width=7cm]{./img/DiagramaB1Helly.png}
- \caption{Diagram of some Helly graph classes}
+ \includegraphics[width=8cm]{./img/diagram.png}
+ \caption{Diagram of some graph classes.}
 \label{fig:diagram}
 \end{figure}  
  
