--- a/includes/include-img/lemaClaw2Maximais.tex
+++ b/includes/include-img/lemaClaw2Maximais.tex
@@ -15,8 +15,8 @@
     \includegraphics[width=5.5cm]{img/claw2}
     \\
     \footnotesize %\centering 
-    (a)  \footnotesize Example of two maximal cliques sharing vertices && \footnotesize (b) Representation  of a claw-clique in grid\\
+    (a)  \footnotesize Example of two maximal cliques sharing vertices. && \footnotesize (b) Representation  of a claw-clique in grid.\\
   \end{tabular}
 
- \caption{Vertices represented by a claw are presents in a unique maximal clique} \label{fig:lemaClaw2Maximais}
+ \caption{Vertices represented by a claw are present in a unique maximal clique.} \label{fig:lemaClaw2Maximais}
 \end{figure}
