--- a/includes/include-img/proibidos.tex
+++ b/includes/include-img/proibidos.tex
@@ -7,7 +7,7 @@
     \includegraphics[width=4cm]{img/s3-1.png}
     \\
     \footnotesize \centering 
-    (a)  \footnotesize Graph $S_3$ &&  \footnotesize (b) Graph $S_{3'}$ \\
+    (a)  \footnotesize Graph $S_3$. &&  \footnotesize (b) Graph $S_{3'}$. \\
     
     %---------------------
       \centering 
@@ -15,9 +15,9 @@
     \includegraphics[width=3cm]{img/c4.png}
     \\
     \footnotesize \centering 
-    (c)  \footnotesize Graph $S_{3''}$ && \footnotesize (b) Graph $C_{4}$\\
+    (c)  \footnotesize Graph $S_{3''}$. && \footnotesize (b) Graph $C_{4}$.\\
   \end{tabular}
 
- \caption{Set of subgraphs that define a  $B_1$-EPG-Helly subfamily}
+ \caption{Graphs on the statement of Theorem \ref{lem:chordalDiamondFree}.}
  \label{fig:proibidos}
 \end{figure} 
